Adição de novo jogo: Hitotsu (fase de testes)